add clickhouse util functions

--- a/notebooks/01-sample-data.ipynb
+++ b/notebooks/01-sample-data.ipynb
@@ -11,31 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {
     "Collapsed": "false",
     "ExecuteTime": {
-     "end_time": "2020-02-24T04:01:08.698625Z",
-     "start_time": "2020-02-24T04:01:08.647861Z"
+     "end_time": "2020-02-25T04:27:25.755069Z",
+     "start_time": "2020-02-25T04:27:25.703638Z"
     }
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import numpy\n",
+    "import inspect\n",
     "import pandas as pd\n",
     "import sqlalchemy as sa\n",
     "from sqlalchemy.orm import sessionmaker\n",
     "from sqlalchemy import func\n",
     "\n",
-    "import clickhouse_util as ch_util"
+    "import clickhouse_util as ch_util\n",
+    "from clickhouse_util import get_clickhouse_create_sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T04:01:09.122014Z",
-     "start_time": "2020-02-24T04:01:09.060560Z"
+     "end_time": "2020-02-25T04:27:25.814812Z",
+     "start_time": "2020-02-25T04:27:25.759206Z"
     }
    },
    "outputs": [
@@ -55,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T04:01:09.466022Z",
-     "start_time": "2020-02-24T04:01:09.420586Z"
+     "end_time": "2020-02-25T04:27:25.901501Z",
+     "start_time": "2020-02-25T04:27:25.841819Z"
     }
    },
    "outputs": [],
@@ -76,12 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {
     "Collapsed": "false",
     "ExecuteTime": {
-     "end_time": "2020-02-24T04:01:10.324846Z",
-     "start_time": "2020-02-24T04:01:10.281327Z"
+     "end_time": "2020-02-25T04:27:25.956751Z",
+     "start_time": "2020-02-25T04:27:25.903710Z"
     }
    },
    "outputs": [],
@@ -92,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T04:01:25.782056Z",
-     "start_time": "2020-02-24T04:01:10.689068Z"
+     "end_time": "2020-02-25T04:28:28.864225Z",
+     "start_time": "2020-02-25T04:27:25.971224Z"
     }
    },
    "outputs": [],
@@ -107,11 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T04:01:25.842817Z",
-     "start_time": "2020-02-24T04:01:25.784935Z"
+     "end_time": "2020-02-25T04:28:28.923535Z",
+     "start_time": "2020-02-25T04:28:28.867282Z"
     }
    },
    "outputs": [
@@ -149,7 +153,7 @@
        " 'LateAircraftDelay': 89329433}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,12 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {
     "Collapsed": "false",
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:43:39.793878Z",
-     "start_time": "2020-02-24T03:43:24.369358Z"
+     "end_time": "2020-02-25T04:38:39.126620Z",
+     "start_time": "2020-02-25T04:38:20.327579Z"
     }
    },
    "outputs": [],
@@ -185,16 +189,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get column names and types for a table"
+    "Get create sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:43:39.892719Z",
-     "start_time": "2020-02-24T03:43:39.795794Z"
+     "end_time": "2020-02-25T04:54:45.329330Z",
+     "start_time": "2020-02-25T04:54:45.282268Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "create table flight (\n",
+      "\tYear Int64,\n",
+      "\tMonth Nullable(Int64),\n",
+      "\tDayofMonth Nullable(Int64),\n",
+      "\tDayOfWeek Nullable(Int64),\n",
+      "\tDepTime Nullable(Float64),\n",
+      "\tCRSDepTime Nullable(Int64),\n",
+      "\tArrTime Nullable(Float64),\n",
+      "\tCRSArrTime Nullable(Int64),\n",
+      "\tUniqueCarrier Nullable(String),\n",
+      "\tFlightNum Nullable(Int64),\n",
+      "\tTailNum Nullable(String),\n",
+      "\tActualElapsedTime Nullable(Float64),\n",
+      "\tCRSElapsedTime Nullable(Float64),\n",
+      "\tAirTime Nullable(Float64),\n",
+      "\tArrDelay Nullable(Float64),\n",
+      "\tDepDelay Nullable(Float64),\n",
+      "\tOrigin Nullable(String),\n",
+      "\tDest Nullable(String),\n",
+      "\tDistance Nullable(Int64),\n",
+      "\tTaxiIn Nullable(Float64),\n",
+      "\tTaxiOut Nullable(Float64),\n",
+      "\tCancelled Nullable(Int64),\n",
+      "\tCancellationCode Nullable(String),\n",
+      "\tDiverted Nullable(Int64),\n",
+      "\tCarrierDelay Nullable(String),\n",
+      "\tWeatherDelay Nullable(String),\n",
+      "\tNASDelay Nullable(String),\n",
+      "\tSecurityDelay Nullable(String),\n",
+      "\tLateAircraftDelay Nullable(String)\n",
+      ")\n",
+      "Engine = MergeTree\n",
+      "Order by Year\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_clickhouse_create_sql(df, 'flight', ['Year']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-25T04:54:49.670932Z",
+     "start_time": "2020-02-25T04:54:49.563944Z"
     }
    },
    "outputs": [
@@ -218,55 +277,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-24T03:44:06.223773Z",
-     "start_time": "2020-02-24T03:44:06.173057Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flight.Year\n"
-     ]
-    }
-   ],
-   "source": [
-    "for col in flight_tbl.columns:\n",
-    "    print(col)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-24T03:44:12.162496Z",
-     "start_time": "2020-02-24T03:44:12.110082Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Year'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "col.name"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -275,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:35:35.890209Z",
-     "start_time": "2020-02-24T03:35:35.776673Z"
+     "end_time": "2020-02-25T04:54:52.691137Z",
+     "start_time": "2020-02-25T04:54:52.132233Z"
     }
    },
    "outputs": [
@@ -313,11 +323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:35:47.304834Z",
-     "start_time": "2020-02-24T03:35:47.300993Z"
+     "end_time": "2020-02-25T04:54:53.473956Z",
+     "start_time": "2020-02-25T04:54:53.431185Z"
     }
    },
    "outputs": [],
@@ -334,11 +344,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:36:06.634856Z",
-     "start_time": "2020-02-24T03:36:06.591021Z"
+     "end_time": "2020-02-25T04:54:55.532571Z",
+     "start_time": "2020-02-25T04:54:55.419651Z"
     }
    },
    "outputs": [],
@@ -354,11 +364,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:36:07.585055Z",
-     "start_time": "2020-02-24T03:36:07.573060Z"
+     "end_time": "2020-02-25T04:54:56.773817Z",
+     "start_time": "2020-02-25T04:54:56.718527Z"
     }
    },
    "outputs": [
@@ -438,7 +448,7 @@
        "4  default  flight     DepTime  Nullable(Int16)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,11 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:36:09.999870Z",
-     "start_time": "2020-02-24T03:36:09.889349Z"
+     "end_time": "2020-02-25T04:54:59.206535Z",
+     "start_time": "2020-02-25T04:54:58.820908Z"
     }
    },
    "outputs": [],
@@ -463,12 +473,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:36:37.548439Z",
-     "start_time": "2020-02-24T03:36:36.635200Z"
+     "end_time": "2020-02-25T04:26:29.883960Z",
+     "start_time": "2020-02-25T04:26:29.825918Z"
+    }
+   },
+   "source": [
+    "Get TailNum count and row count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-25T04:55:04.498792Z",
+     "start_time": "2020-02-25T04:55:01.023510Z"
     }
    },
    "outputs": [
@@ -478,7 +500,7 @@
        "86149549"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,11 +511,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:36:38.650044Z",
-     "start_time": "2020-02-24T03:36:38.539450Z"
+     "end_time": "2020-02-25T04:55:04.719850Z",
+     "start_time": "2020-02-25T04:55:04.503742Z"
     }
    },
    "outputs": [
@@ -503,7 +525,7 @@
        "123534969"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,13 +535,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-25T04:25:46.449734Z",
+     "start_time": "2020-02-25T04:25:46.399503Z"
+    }
+   },
+   "source": [
+    "Compute percent of null values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {
     "Collapsed": "false",
     "ExecuteTime": {
-     "end_time": "2020-02-24T03:36:39.599854Z",
-     "start_time": "2020-02-24T03:36:39.509002Z"
+     "end_time": "2020-02-25T04:55:07.168032Z",
+     "start_time": "2020-02-25T04:55:07.013160Z"
     },
     "jupyter": {
      "outputs_hidden": true
@@ -533,23 +567,23 @@
        "Month                  0.000\n",
        "DayofMonth             0.000\n",
        "DayOfWeek              0.000\n",
-       "DepTime                2.763\n",
+       "DepTime                3.812\n",
        "CRSDepTime             0.000\n",
-       "ArrTime                3.085\n",
+       "ArrTime                4.189\n",
        "CRSArrTime             0.000\n",
        "UniqueCarrier          0.000\n",
        "FlightNum              0.000\n",
-       "TailNum               49.152\n",
-       "ActualElapsedTime      3.085\n",
-       "CRSElapsedTime         0.001\n",
-       "AirTime               51.877\n",
-       "ArrDelay               3.085\n",
-       "DepDelay               2.763\n",
+       "TailNum               26.272\n",
+       "ActualElapsedTime      4.189\n",
+       "CRSElapsedTime         0.011\n",
+       "AirTime               30.206\n",
+       "ArrDelay               4.189\n",
+       "DepDelay               3.812\n",
        "Origin                 0.000\n",
        "Dest                   0.000\n",
        "Distance               0.000\n",
-       "TaxiIn                49.152\n",
-       "TaxiOut               49.152\n",
+       "TaxiIn                26.272\n",
+       "TaxiOut               26.272\n",
        "Cancelled              0.000\n",
        "CancellationCode     100.000\n",
        "Diverted               0.000\n",
@@ -561,7 +595,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,13 +603,6 @@
    "source": [
     "df.isna().sum() * 100/df.shape[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -595,6 +622,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
