--- a/notebooks/01-clickhouse-python.ipynb
+++ b/notebooks/01-clickhouse-python.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Connect to clickhouse database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
